--- a/src/app/featured/dashboard/students/components/students-list/students-list.component.html
+++ b/src/app/featured/dashboard/students/components/students-list/students-list.component.html
@@ -38,13 +38,13 @@
 
     <!-- Actions -->
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> Acción</th>
+    <th mat-header-cell *matHeaderCellDef> Acciones</th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button color="warn" (click)="OnDeleteStudent(element.id)">
-        <mat-icon>delete</mat-icon>
-      </button>
-      <button mat-icon-button color="primary" (click)="OnEditStudent(element.id)">
+      <button mat-icon-button color="primary" matTooltip="Edit" [routerLink]="['edit', element.id]">
         <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" matTooltip="Delete" (click)="OnDeleteStudent(element.id)">
+        <mat-icon>delete</mat-icon>
       </button>
     </td>
   </ng-container>
@@ -56,7 +56,7 @@
     <mat-paginator [pageSizeOptions]="[5,10,25,100]" aria-label="Select page of students"></mat-paginator>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-flat-button color="primary" (click)="OnCreateStudent()">Agregar Estudiante</button>
+    <button mat-flat-button color="primary" routerLink="create">Agregar Estudiante</button>
   </mat-card-actions>
 </mat-card>
 
