--- a/src/app/featured/dashboard/layout/navbar/navbar.component.html
+++ b/src/app/featured/dashboard/layout/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <span>Inicio</span>
   </a>
 
-  <a mat-list-item routerLink="/dashboard/students" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: false }">
+  <a mat-list-item routerLink="/dashboard/students" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: false }" *ngIf="(user$ | async)?.role === 'ADMIN'">
     <mat-icon>people</mat-icon>
     <span>Estudiantes</span>
   </a>
